--- a/Server/package.json
+++ b/Server/package.json
@@ -17,6 +17,7 @@
     "express": "^4.19.2",
     "mongoose": "^8.6.1",
     "nodemon": "^3.1.4",
+    "snappy": "file:",
     "socket.io": "^4.7.5"
   }
 }
